# cpack-exercise-wt2526

./: CMakeLists.txt  Dockerfile  changelog  docker-entrypoint.sh
cmake/: CPackConfig.cmake
man/: cpackexample.1
